    * Move doctests (doc code examples) to main branch
    * Update `ResponseT` type hint
    * Allow to control the minimum SSL version
    * Add an optional lock_name attribute to LockError.
    * Fix return types for `get`, `set_path` and `strappend` in JSONCommands
    * Connection.register_connect_callback() is made public.
    * Fix async `read_response` to use `disable_decoding`.
    * Add 'aclose()' methods to async classes, deprecate async close().
    * Fix #2831, add auto_close_connection_pool=True arg to asyncio.Redis.from_url()
    * Fix incorrect redis.asyncio.Cluster type hint for `retry_on_error`
    * Fix dead weakref in sentinel connection causing ReferenceError (#2767)
    * Fix #2768, Fix KeyError: 'first-entry' in parse_xinfo_stream.
    * Fix #2749, remove unnecessary __del__ logic to close connections.
    * Fix #2754, adding a missing argument to SentinelManagedConnection
    * Fix `xadd` command to accept non-negative `maxlen` including 0
    * Revert #2104, #2673, add `disconnect_on_error` option to `read_response()` (issues #2506, #2624)
    * Add `address_remap` parameter to `RedisCluster`
    * Fix incorrect usage of once flag in async Sentinel
    * asyncio: Fix memory leak caused by hiredis (#2693)
    * Allow data to drain from async PythonParser when reading during a disconnect()
    * Use asyncio.timeout() instead of async_timeout.timeout() for python >= 3.11 (#2602)
    * Add a Dependabot configuration to auto-update GitHub action versions.
    * Add test and fix async HiredisParser when reading during a disconnect() (#2349)
    * Use hiredis-py pack_command if available.
    * Support `.unlink()` in ClusterPipeline
    * Simplify synchronous SocketBuffer state management
    * Fix string cleanse in Redis Graph
    * Make PythonParser resumable in case of error (#2510)
    * Add `timeout=None` in `SentinelConnectionManager.read_response`
    * Documentation fix: password protected socket connection (#2374)