@@ -1,3 +1,4 @@
+    * No longer necessary check remove from tests
     * Move doctests (doc code examples) to main branch
     * Update `ResponseT` type hint
     * Allow to control the minimum SSL version
